Adding final slides

--- a/index.html
+++ b/index.html
@@ -153,4 +153,6 @@ window.onload = function() {
 <div>Sistema de<br/><em>alertas</em></div>
 <div><em>Automatización</em><br/>de procesos</div>
 <div><em>Código liberado</em><br/>en GitHub</div>
+<div><blockquote>Los datos no tienen ideología <em>pero quien los trata o la forma de tratarlos sí</em></blockquote></div>
+<div><blockquote>Los códigos no tienen ideología <em>pero quien los crea y la forma de crearlos sí</em></blockquote></div>
 </body>
